Avoid exception if no price found for a market
fixes #4271